<package>
  <name>openslam_gmapping</name>
  <version>0.1.0</version>
  <description>openslam_gmapping</description>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url type="website">http://openslam.org/gmapping</url>
  <url type="repository">https://github.com/ros-perception/openslam_gmapping</url>
  <url type="bugtracker">https://github.com/ros-perception/openslam_gmapping/issues</url>

  <author>Giorgio Grisetti</author>
  <author>Cyrill Stachniss</author>
  <author>Wolfram Burgard</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
