<package format="3">
  <name>openslam_gmapping</name>
  <version>0.1.2</version>
  <description>ROS-ified version of gmapping SLAM. Forked from https://openslam.informatik.uni-freiburg.de/data/svn/gmapping/trunk/</description>
  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url type="website">http://openslam.org/gmapping</url>
  <url type="repository">https://github.com/ros-perception/openslam_gmapping</url>
  <url type="bugtracker">https://github.com/ros-perception/openslam_gmapping/issues</url>

  <author>Giorgio Grisetti</author>
  <author>Cyrill Stachniss</author>
  <author>Wolfram Burgard</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
